--- a/style.css
+++ b/style.css
@@ -8,10 +8,14 @@ body{
   font-variation-settings:
     "wdth" 100;
 }
+.header{
+    background-color: blanchedalmond;
+}
 
 nav{
 
-    display:flex; justify-content: space-between; align-items: center;
+    display:flex; justify-content: space-between; align-items: center; 
+    margin: 0px 150px; background-color: blanchedalmond;
 }
 .nav_title{
     font-size: 45px;
@@ -35,4 +39,13 @@ nav>ul>li>a{
     border-radius: 5px; background-color: orange;
     border: 0px; font-size: 20px; font-weight: 700px;
     padding: 15px 35px; color: azure;
+}
+.banner{
+    margin: 0px 150px;
+    display: flex;
+    padding: 30px 30px 30px 150px;
+    align-items: center;
+}
+.profile_pic{
+    width: 500px;
 }
